<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="15dp">

    <Button
        android:id="@+id/Mbtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mbtn1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Mbtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mbtn2"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/Mbtn1"/>

    <Button
        android:id="@+id/Mbtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mbtn3"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/Mbtn2"/>

</androidx.constraintlayout.widget.ConstraintLayout>