<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars"
            android:layout_weight="1"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCode"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvName"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvStock"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPrice"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>